Show the Has Splits column in the order history and admin order history

--- a/Purchasing.Web/Views/History/_OrdersTable.cshtml
+++ b/Purchasing.Web/Views/History/_OrdersTable.cshtml
@@ -331,6 +331,25 @@
         }
     }
 
+    if (Model.ColumnPreferences.ShowHasSplits)
+    {
+        if (tableHeader)
+        {
+            result.Append("<th>Has Splits</th>");
+        }
+        else
+        {
+            if (item.HasAccountSplit)
+            {
+                result.Append("<td class='red'>Yes</td>");
+            }
+            else
+            {
+                result.Append("<td class='gree'>No</td>");
+            }
+        }
+    }
+
     if(Model.ColumnPreferences.ShowOrderReceived)
     {
         if(tableHeader)
