--- a/Purchasing.Web/Views/User/ColumnPreferences.cshtml
+++ b/Purchasing.Web/Views/User/ColumnPreferences.cshtml
@@ -233,6 +233,16 @@
                         @Html.ValidationMessageFor(model => model.ShowOrderReceived)
                     </div>
                 </li>
+                
+                <li>
+                    <div class="editor-label">
+                        @Html.LabelFor(model => model.ShowHasSplits) 
+                    </div>
+                    <div class="editor-field">
+                        @Html.EditorFor(model => model.ShowHasSplits)
+                        @Html.ValidationMessageFor(model => model.ShowHasSplits)
+                    </div>
+                </li>
 
                 <li>
                     <div class="editor-label">
