updated link to the system requirements page for the browser

--- a/Purchasing.Web/Views/Home/Index.cshtml
+++ b/Purchasing.Web/Views/Home/Index.cshtml
@@ -169,7 +169,14 @@
 
                 </div>
                 
+                
                 <div id="browsers">
+                    
+                    <p>For an updated list of system requirements please view this website <a href="http://ucdavis.github.com/Purchasing/system.html">here</a>.</p>
+
+                </div>
+
+                @*                <div id="browsers">
                     
                     <p>
                         The PrePurchasing system uses many of the latest web technologies, for the best experience we recommend using Mozilla Firefox and Google Chrome browsers.
@@ -178,7 +185,7 @@
                     <div class="browser chrome">&nbsp;</div>
                     <div class="browser firefox">&nbsp;</div>
 
-                </div>
+                </div>*@
 
 
 
