testing and tweaking the db seeding scripts

--- a/Purchasing.Web/Views/Training/Index.cshtml
+++ b/Purchasing.Web/Views/Training/Index.cshtml
@@ -13,8 +13,8 @@
         <ul>
             
             <li>Add Trainee</li>
-            <li>Configure Session</li>
-            <li>Wipe Database</li>
+            <li>@Html.ActionLink("Configure Session", "Setup")</li>
+            <li>@Html.ActionLink("Wipe Database", "Wipe")</li>
 
         </ul>
 
