--- a/Purchasing.Web/Views/Training/Setup.cshtml
+++ b/Purchasing.Web/Views/Training/Setup.cshtml
@@ -1,3 +1,14 @@
 ﻿@{
     ViewBag.Title = "Training Setup Console";
 }
+
+<h2>Are you sure you want to wipe the database?</h2>
+
+@using (Html.BeginForm())
+{
+    
+    <input type="hidden" value="anlai" name="userIds"/>
+    
+    @Html.AntiForgeryToken()
+    <input type="submit" value="Wipe Database"/>
+}
