--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Purchasing.Core.Domain.DepartmentalAdminRequest
+﻿@model Purchasing.Web.Controllers.DepartmentalAdminRequestViewModel
 
 @{
 	ViewBag.Title = "Create";
@@ -36,91 +36,92 @@
 @using (Html.BeginForm()) {
 	@Html.AntiForgeryToken()
 	@Html.ValidationSummary(true)
-    @Html.HiddenFor(x=> x.Id)
-<section class="ui-corner-all">
-@* Legend is required if you have more than one widget/unit to help the user understand what is being asked of them.
-Example: Dinosaur 1  *@
-	<header class="ui-corner-top">DepartmentalAdminRequest</header>
+    @Html.HiddenFor(x=> x.DepartmentalAdminRequest.Id)
+<section class="display-form">
+	<header class="ui-widget-header ui-corner-top">Request Departmental Admin</header>
 
 	<div class="section-contents">
 
-		<div class="section-text">
-	
-			@*<h4>Form Header</h4>*@
-			@*<p>Be specific so the user understands what exactly you are looking for.  Example: After Dinosaur 1 moves out of his/her parents' den what will Dinosaur 1 do?  We need to know his employment plan, feeding area, as well as living situation.  This information will not be sold or given to carnivores.</p>*@
+		<div class="section-text">	
 			<p>All required fields are in <strong>bold</strong> and have a red <span class="required">*</span> next to the field label.</p>
-	
 		</div>
 
-		<ul>
-						<li>
-					<div class="editor-label required">
-						@Html.LabelFor(model => model.FirstName)<span>*</span> 
-					</div>
-					<div class="editor-field">
-						@Html.DisplayFor(model => model.FirstName)						
-					</div>
-				</li>
-						<li>
-					<div class="editor-label required">
-						@Html.LabelFor(model => model.LastName)<span>*</span> 
-					</div>
-					<div class="editor-field">
-						@Html.DisplayFor(model => model.LastName)						
-					</div>
-				</li>	
-                <li>
-					<div class="editor-label required">
-						@Html.LabelFor(model => model.Email)<span>*</span> 
-					</div>
-					<div class="editor-field">
-						@Html.DisplayFor(model => model.Email)
-					</div>
-				</li>
-						<li>
-					<div class="editor-label">
-						@Html.LabelFor(model => model.PhoneNumber) 
-					</div>
-					<div class="editor-field">
-						@Html.EditorFor(model => model.PhoneNumber)
-						@Html.ValidationMessageFor(model => model.PhoneNumber)
-					</div>
-				</li>					
-						<li>
-					<div class="editor-label required">
-						@Html.LabelFor(model => model.DepartmentSize)<span>*</span> 
-					</div>
-					<div class="editor-field">
+        <ul>
+            <li>
+                <div class="display-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.FirstName)
+                </div>
+                <div class="display-label">
+                    @Html.DisplayFor(model => model.DepartmentalAdminRequest.FirstName)						
+                </div>
+            </li>
+            <li>
+                <div class="display-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.LastName) 
+                </div>
+                <div class="display-label">
+                    @Html.DisplayFor(model => model.DepartmentalAdminRequest.LastName)						
+                </div>
+            </li>	
+            <li>
+                <div class="display-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.Email) 
+                </div>
+                <div class="display-label">
+                    @Html.DisplayFor(model => model.DepartmentalAdminRequest.Email)
+                </div>
+            </li>
+            <li>
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.PhoneNumber) 
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.DepartmentalAdminRequest.PhoneNumber)
+                    @Html.ValidationMessageFor(model => model.DepartmentalAdminRequest.PhoneNumber)
+                </div>
+            </li>					
+            <li>
+                <div class="editor-label required">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.DepartmentSize)<span>*</span> 
+                </div>
+                <div class="editor-field">
                     <ul>
-                        <li><input type="radio" name="DepartmentSize" class="required" value="0" /> Small (Less than 50 users) </li>
-                        <li><input type="radio" name="DepartmentSize" class="required" value="1" /> Medium (50-100 users) </li>
-                        <li><input type="radio" name="DepartmentSize" class="required" value="2" /> Large (Greater than 100 users) </li>
-						</ul>
-                        @Html.ValidationMessageFor(model => model.DepartmentSize)
-					</div>
-				</li>
-						<li>
-					<div class="editor-label">
-						@Html.LabelFor(model => model.SharedOrCluster) 
-					</div>
-					<div class="editor-field">
-						@Html.EditorFor(model => model.SharedOrCluster)
-						@Html.ValidationMessageFor(model => model.SharedOrCluster)
-					</div>
-				</li>
-                 <li>
+                        <li><input type="radio" name="DepartmentalAdminRequest.DepartmentSize" class="required" value="0" @(Model.DepartmentalAdminRequest.DepartmentSize == 0 ? @"checked" : string.Empty)/> Small (Less than 50 users) </li>
+                        <li><input type="radio" name="DepartmentalAdminRequest.DepartmentSize" class="required" value="1" @(Model.DepartmentalAdminRequest.DepartmentSize == 1 ? @"checked" : string.Empty)/> Medium (50-100 users) </li>
+                        <li><input type="radio" name="DepartmentalAdminRequest.DepartmentSize" class="required" value="2" @(Model.DepartmentalAdminRequest.DepartmentSize == 2 ? @"checked" : string.Empty)/> Large (Greater than 100 users) </li>
+                    </ul>
+                    @Html.ValidationMessageFor(model => model.DepartmentalAdminRequest.DepartmentSize)
+                </div>
+            </li>
+            <li>
+                <div class="editor-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.SharedOrCluster) 
+                </div>
+                <div class="editor-field">
+                    @Html.EditorFor(model => model.DepartmentalAdminRequest.SharedOrCluster)
+                    @Html.ValidationMessageFor(model => model.DepartmentalAdminRequest.SharedOrCluster)
+                </div>
+            </li>
+            <li>
                 <div class="editor-label">@Html.LabelFor(x=>x.Organizations)</div>
-                <select id="User_Organizations" name="orgs" multiple="" >                   
+                <select id="User_Organizations" name="orgs" multiple="" >
+                @if (Model.Organizations != null)
+                {
+                    foreach (var a in Model.Organizations)
+                    {
+                        <option selected="" value="@a.Id">@(string.Format("{0} ({1})", a.Name, a.Id))</option>
+                    }
+                }                   
                 </select>                
             </li>						
-					<li>
-				@* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
-				<div class="editor-label">&nbsp;</div>
-				<div class="editor-field">
-				<input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "Index")
-				</div>
-			</li>
-		</ul>
+            <li>
+                @* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
+                <div class="editor-label">&nbsp;</div>
+                <div class="editor-field">
+                    <input class="button" type="submit" value="Save" /> | @Html.ActionLink("Cancel", "Index")
+                </div>
+            </li>
+        </ul>
 
 	</div>
 
