--- a/Purchasing.Web/Views/Shared/_OrderHistoryRows.cshtml
+++ b/Purchasing.Web/Views/Shared/_OrderHistoryRows.cshtml
@@ -18,12 +18,13 @@
                 }
             }
         </td>
-        <td rowspan="2" class="dash-ordernum">@Html.ActionLink(item.RequestNumber, "Review", "Order", new { id = item.OrderId }, new { })</td>
+        <td class="dash-ordernum">@Html.ActionLink(item.RequestNumber, "Review", "Order", new { id = item.OrderId }, new { })</td>
         <td class="dash-date">@string.Format("{0:ddd MMM d - hh:mm tt}", item.DateCreated)</td>
         <td class="dash-requester">@item.DisplayVendorOrCreator()</td>
         <td class="dash-level">@item.StatusName</td>
     </tr>
     <tr>
+        <td class="dash-summary">Needed @string.Format("{0:MMMM d, yyyy}", item.DateNeeded)</td>
         <td class="dash-summary">Last action @string.Format("{0:MMMM d, yyyy}", item.LastActionDate)</td>
         <td colspan="2" class="dash-summary">@item.Summary</td>
     </tr>
