--- a/Purchasing.Web/Views/Training/Wipe.cshtml
+++ b/Purchasing.Web/Views/Training/Wipe.cshtml
@@ -8,4 +8,6 @@
 {
     @Html.AntiForgeryToken()
     <input type="submit" value="Wipe Database"/>
+    <text>|</text>
+    @Html.ActionLink("Cancel", "Index")
 }
