added deny and link in menu for admins

--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Index.cshtml
@@ -75,7 +75,7 @@
                 </td>
 
                 <td>
-                    <a href='@Url.Action("Delete", new { id = item.Id })' class="ui-icon ui-icon-trash" title="Delete Request">
+                    <a href='@Url.Action("Deny", new { id = item.Id })' class="ui-icon ui-icon-trash" title="Deny Request">
                     </a>
                 </td>
 
