--- a/Purchasing.Web/Views/DepartmentalAdminRequest/Deny.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/Deny.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Purchasing.Web.Controllers.DepartmentalAdminRequestViewModel
 
 @{
-    ViewBag.Title = "Approve";
+    ViewBag.Title = "Deny";
 
 }
 
@@ -193,7 +193,7 @@
                 @* For the clear and submit buttons an empty label is required. Example: <label>&nbsp;</label> *@
                 <div class="editor-label">&nbsp;</div>
                 <div class="editor-field">
-                    <input class="button" type="submit" value="Approve" /> | @Html.ActionLink("Cancel", "Index")
+                    <input class="button" type="submit" value="Deny" /> | @Html.ActionLink("Cancel", "Index")
                 </div>
             </li>
         </ul>
