--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -150,6 +150,7 @@
                         @if (roles.Contains(Role.Codes.Admin))
                         {
                             <li>@Html.ActionLink("Administrators", "Index", "Admin", new { }, new { @class = "navigation-button" })</li>   
+                            <li>@Html.ActionLink("Dept Admin Requests", "Index", "DepartmentalAdminRequest", new { }, new { @class = "navigation-button" })</li>
                             <li>@Html.ActionLink("Service Messages", "Index", "ServiceMessage", new {}, new {@class="navigation-button"})</li> 
                         }                        
                         
