--- a/Purchasing.Web/Views/Shared/_Layout.cshtml
+++ b/Purchasing.Web/Views/Shared/_Layout.cshtml
@@ -183,7 +183,12 @@
 			
 			<header class="main-header @(ViewBag.SingleColumn == null || (bool)ViewBag.SingleColumn ? "single-column-header" : "wide-header")">
 				
-				@if (!string.IsNullOrWhiteSpace(TempData["ErrorMessage"] as string))
+                <div id="browser-warning" style="display:none;">
+                    You are currently using a browser that is not supported.  
+                    Please check <a href="http://ucdavis.github.com/Purchasing/system.html">our system requirements page</a> and return to PrePurchasing using one of our recommended browsers.
+                </div>
+
+                @if (!string.IsNullOrWhiteSpace(TempData["ErrorMessage"] as string))
     { 
 				<div id="error-message">
 					@TempData["ErrorMessage"]
