DeptAdminRequest Repository Tests

--- a/Purchasing.Web/Views/DepartmentalAdminRequest/_daRequest.cshtml
+++ b/Purchasing.Web/Views/DepartmentalAdminRequest/_daRequest.cshtml
@@ -21,6 +21,14 @@
             </li>  
             <li>
                 <div class="display-label">
+                    @Html.LabelFor(model => model.DepartmentalAdminRequest.Id)
+                </div>
+                <div class="display-details">
+                    @Html.DisplayFor(model => model.DepartmentalAdminRequest.Id)						
+                </div>
+            </li>
+            <li>
+                <div class="display-label">
                     @Html.LabelFor(model => model.DepartmentalAdminRequest.DateCreated)
                 </div>
                 <div class="display-details">
