Changed text for Enable Modification button

--- a/Purchasing.Web/Views/Order/_ItemModificationTemplate.cshtml
+++ b/Purchasing.Web/Views/Order/_ItemModificationTemplate.cshtml
@@ -6,8 +6,11 @@
 		
             <div class="section-text">
                 <p>
-                    If you need to change line item details or account distributions, please press the "Enable Modification" button below.  
-                    Enabling modification will cause the approvals for this order to be recalculated when you save your changes.
+                    Need to change the Account or need to change something in the Line Items? <br/> <br/>
+                    Click the "Edit Line Items and Accounts" below
+                    to enable modification of those.
+                    We specifically require this to be clicked even when you are on the edit page because changing account information will
+                    cause the approvals for this order to be recalculated.
                 </p>
             </div>
 		<div>
@@ -17,7 +20,7 @@
 						
 					</div>
 					<div class="editor-field">
-						<a href="#" class="button" id="item-modification-button">Enable modification</a>
+						<a href="#" class="button" id="item-modification-button">Edit Line Items and Accounts</a>
 					</div>
 				</li>
 			</ul>
