styled the last updated

--- a/Purchasing.Web/Views/History/Index.cshtml
+++ b/Purchasing.Web/Views/History/Index.cshtml
@@ -23,7 +23,7 @@
 
 @section SubNav
 {
-    <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip">
+    <span id="refreshMessage" title="@ViewBag.LastRefreshTitle" class="showTip" style="position: relative; top: -20px; font-style: italic;">
         @ViewBag.LastRefresh 
     </span>
 	<ul class='navigation'>
