Fixed system message and person icon.

--- a/Purchasing.Web/Css/Site.css
+++ b/Purchasing.Web/Css/Site.css
@@ -1,4 +1,4 @@
-e/* ---------------- */
+/* ---------------- */
 /*system wide status*/
 /* ---------------- */
 #system-messages-text {margin:0.5em auto; text-align:center;}
